--- a/src/navBar.css
+++ b/src/navBar.css
@@ -10,11 +10,15 @@
 
 .slider{
 
-   margin-right:30px ;
-
+     margin-right:30px ;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
 
 
 }
+
+
 
 .selectionList{
 
