--- a/src/footer.css
+++ b/src/footer.css
@@ -1,16 +1,13 @@
 .footer{
     border-top:0.5px solid green;
-    padding:0;
     margin:0;
-    margin-top:200px;
     text-align: center;
-    padding:2px;
+    padding:0;
     
- 
-
-
 }
-.footer p {
-  margin:0;              
-            
+
+.text{
+
+  margin-top:0.5;                       
 }
+
